Nucleo de IOP TCP para RBI (260406:23:00)